0.5 "" (released xx.xx.2010)

  * Ported to Python 2.4.

0.4 "Nikita" (released 3.3.2010)

  * Added support for Windows systems.
  * Added support for creating ZIP files.
  * Improved listing of available archive formats.
  * Improved recognition of MIME types.

0.3 "Management" (released 23.2.2010)

  * Better test if encodings of archive commands are supported
    (for example .tar.Z needs a decompress program).

0.2 "Birdy" (released 22.2.2010)

  * Add support for LZMA and XZ archives.

0.1 "Hard Boiled" (released 21.2.2010)

  * Initial release.