@@ -1,2 +1,1 @@
-- Support lzip archives
 - Support zoo archives
